--- a/app/src/main/res/layout/foundation_donate_header.xml
+++ b/app/src/main/res/layout/foundation_donate_header.xml
@@ -4,33 +4,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    android:background="#ffffff00"
+    android:background="@color/foundationBck"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="300dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_marginTop="20dp"
-            android:layout_alignParentTop="true"
-            android:textColor="#0000ff"
-            android:textSize="20dp"
-            android:text="NAME"
-            android:id="@+id/name"
-            android:layout_centerHorizontal="true"/>
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
-            android:layout_marginTop="20dp"
-            android:layout_width="100dp"
-            android:layout_below="@+id/name"
-            android:layout_height="100dp"
+            android:layout_marginTop="15dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
             android:src="@drawable/layer_5"
-            app:civ_border_width="2dp"
-            app:civ_border_color="@color/blueLottery"/>
+            app:civ_border_width="3dp"
+            app:civ_border_color="@color/foundationBorder"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="25dp"
@@ -59,15 +49,20 @@
             android:layout_below="@+id/follow"
             android:layout_centerHorizontal="true"/>
         <ImageView
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="31dp"
+            android:layout_marginRight="31dp"
             android:layout_height="30dp"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/rectangle_34"
+            android:src="@drawable/line"
             android:id="@+id/niceLine"
             android:layout_below="@+id/donations"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
+            android:layout_marginLeft="31dp"
+            android:layout_marginRight="31dp"
             android:orientation="horizontal"
             android:layout_below="@+id/niceLine"
             android:weightSum="100"
@@ -76,33 +71,45 @@
                 android:layout_width="0dp"
                 android:background="@color/transparent"
                 android:layout_height="match_parent"
-                android:layout_weight="20"/>
+                android:layout_weight="22"/>
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="20dp"
-                android:layout_weight="20"
+                android:layout_weight="6"
                 android:id="@+id/smallImage1"
-                android:src="@drawable/pas_icn"
+                android:src="@drawable/don_icns"
 
                 />
             <View
                 android:layout_width="0dp"
                 android:background="@color/transparent"
                 android:layout_height="match_parent"
-                android:layout_weight="20"/>
+                android:layout_weight="19"/>
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="20dp"
-                android:layout_weight="20"
+                android:layout_weight="6"
+                android:id="@+id/smallImage3"
+                android:src="@drawable/badges_icn" />
+           <View
+                android:layout_width="0dp"
+                android:background="@color/transparent"
+                android:layout_height="match_parent"
+                android:layout_weight="19"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:layout_weight="6"
                 android:id="@+id/smallImage2"
-                android:src="@drawable/pas_icn" />
+                android:src="@drawable/badges_icn" />
 
             <View
                 android:layout_width="0dp"
                 android:background="@color/transparent"
                 android:layout_height="match_parent"
-                android:layout_weight="20"/>
+                android:layout_weight="22"/>
         </LinearLayout>
+
 
     </RelativeLayout>
 
