--- a/app/src/main/res/drawable/toggle_me.xml
+++ b/app/src/main/res/drawable/toggle_me.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true"
-        android:drawable="@drawable/switch_off" /> <!-- checked -->
-    <item android:drawable="@drawable/switch_on" /> <!-- default/unchecked -->
+        android:drawable="@drawable/switch_on" /> <!-- checked -->
+    <item android:drawable="@drawable/switch_off" /> <!-- default/unchecked -->
 </selector>
