--- a/app/src/main/res/layout/facebook.xml
+++ b/app/src/main/res/layout/facebook.xml
@@ -18,4 +18,9 @@
         android:layout_marginRight="15dp"
         style="@style/FacebookLoginButton"/>
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/iv"
+        android:layout_below="@+id/fbLogin"/>
 </RelativeLayout>
