--- a/app/src/main/res/layout/activity_hide_report_dialog.xml
+++ b/app/src/main/res/layout/activity_hide_report_dialog.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:paddingTop="16dp"
     android:paddingBottom="16dp"
-    tools:context="cm.com.newdon.HideDeleteDialogActivity">
+    tools:context=".EditDialogActivity">
 
     <TextView
         android:layout_width="match_parent"
