--- a/app/src/main/res/layout/comment_item_for_lv.xml
+++ b/app/src/main/res/layout/comment_item_for_lv.xml
@@ -49,7 +49,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imOptions"
+        android:id="@+id/ivOptions"
         android:src="@drawable/options_btn"
         android:layout_alignParentRight="true" />
 </RelativeLayout>
