--- a/app/src/main/res/layout/activity_bottombar.xml
+++ b/app/src/main/res/layout/activity_bottombar.xml
@@ -55,7 +55,7 @@
             android:layout_marginTop="7dp"
             android:layout_marginBottom="7dp"
             android:layout_height="50dp"
-            android:src="@drawable/layer_5"
+            android:src="@drawable/profile"
             android:id="@+id/profileImage"
             app:civ_border_color="#0fff"/>
 
