--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginBottom="7dp"
         android:layout_marginTop="7dp"
-        android:src="@drawable/layer_5"
+        android:src="@drawable/profile"
         app:civ_border_color="#0fff" />
 
     <TextView
