--- a/app/src/main/res/layout/profile_donate_header.xml
+++ b/app/src/main/res/layout/profile_donate_header.xml
@@ -28,7 +28,7 @@
             android:layout_below="@+id/name"
             android:layout_height="120dp"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/layer_5"
+            android:src="@drawable/profile"
             app:civ_border_width="2dp"
             app:civ_border_color="@color/blueLottery"/>
 
@@ -41,7 +41,7 @@
             android:layout_alignTop="@+id/profile_image"
             android:layout_marginLeft="-25dp"
             android:layout_marginTop="10dp"
-            android:id="@+id/follow_btn"
+            android:id="@+id/edit_btn"
             />
         <TextView
             android:layout_width="wrap_content"
